# kurisu

./: Cargo.toml  README.md
jira_openapi/: Cargo.toml  README.md
jira_openapi/docs/: IssueBulkOperationsApi.md  IssueSearchApi.md  PermissionPayloadDto.md
jira_openapi/src/apis/: announcement_banner_api.rs  app_data_policies_api.rs  app_migration_api.rs  app_properties_api.rs  application_roles_api.rs  audit_records_api.rs  avatars_api.rs  classification_levels_api.rs  configuration.rs  dashboards_api.rs  dynamic_modules_api.rs  filter_sharing_api.rs  filters_api.rs  group_and_user_picker_api.rs  groups_api.rs  issue_attachments_api.rs  issue_bulk_operations_api.rs  issue_comment_properties_api.rs  issue_comments_api.rs  issue_custom_field_associations_api.rs  issue_custom_field_configuration_apps_api.rs  issue_custom_field_contexts_api.rs  issue_custom_field_options_api.rs  issue_custom_field_options_apps_api.rs  issue_custom_field_values_apps_api.rs  issue_field_configurations_api.rs  issue_fields_api.rs  issue_link_types_api.rs  issue_links_api.rs  issue_navigator_settings_api.rs  issue_notification_schemes_api.rs  issue_priorities_api.rs  issue_properties_api.rs  issue_remote_links_api.rs  issue_resolutions_api.rs  issue_search_api.rs  issue_security_level_api.rs  issue_security_schemes_api.rs  issue_type_properties_api.rs  issue_type_schemes_api.rs  (+58 more)
jira_openapi/src/models/: actor_input_bean.rs  actors_map.rs  add_atlassian_team_request.rs  add_field_bean.rs  add_group_bean.rs  add_notifications_details.rs  add_security_scheme_levels_request_bean.rs  attachment.rs  (+856 more)
(+10 files in other folders)
