[package]
name = "kurisu"
version = "0.1.0"
edition = "2024"

[dependencies]
jira_openapi = { path = "./jira_openapi" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
url = "2.5"
async-trait = "0.1"